syntax = "proto3";

package com.abhi.grpc;

service Clock {
    rpc StreamTime(TimeRequest) returns (stream TimeResponse) {};
}

message TimeRequest{
    int64 count = 1;
}
message TimeResponse {
    int64 currentTime = 1;
}
